<resources>
    <string name="app_name">Quiz App</string>
    <string name="remaining_time_text">Remaining time</string>
    <string name="question_1"><b>1. What does PHP stands for?</b></string>
    <string name="question_2"><b>2. What does a Full-Stack Developer do?</b></string>
    <string name="question_3"><b>3. In Javascript(Vanilla) how do you assign a tag to a variable? Write below with the proper syntax. (Tag name is \"header\")</b></string>
    <string name="question_4"><b>4. What is the output of this code?</b></string>
    <string name="question_5"><b>5. Which one of these is different from the others?</b></string>
    <string name="question_6"><b>6. What does XSS stands for?</b></string>
    <string name="question_7"><b>7. What is HTTP Status OK response code?</b></string>
    <string name="question_8"><b>8. Which of these are programming languages?</b></string>
    <string name="question_9"><b>9. What is open-source?</b></string>
    <string name="question_10"><b>10. What does HTML stands for?</b></string>
    <string name="answer_placeholder"><i>Answer</i></string>
    <string name="answer_1_1">Programmable Hyper Processing</string>
    <string name="answer_1_2">PHP: Hypertext Preprocessor</string>
    <string name="answer_1_3">Process Handler Pretext</string>
    <string name="answer_1_4">Potter, Harry Potter</string>
    <string name="answer_2_1">Front-end (HTML, CSS)</string>
    <string name="answer_2_2">Back-End (PHP, Node.js)</string>
    <string name="answer_2_3">Databases and Servers</string>
    <string name="answer_2_4">None of the above</string>
    <string name="answer_4_info">function subtract (val1) {\n\tvar a = val1;\n\tvar b = function(val2) {\n\t\treturn val2;\n\t}\n\treturn a-b; \n}\nsubtract(75)(25);</string>
    <string name="answer_5_1">PHP</string>
    <string name="answer_5_2">HTML</string>
    <string name="answer_5_3">Node.js</string>
    <string name="answer_6_1">Cross Side Scripting</string>
    <string name="answer_6_2">Xtreme State Solution</string>
    <string name="answer_6_3">Exception States</string>
    <string name="answer_6_4">X Side Style</string>
    <string name="answer_8_1">Python</string>
    <string name="answer_8_2">Android</string>
    <string name="answer_8_3">Linux</string>
    <string name="answer_8_4">Java</string>
    <string name="answer_9_1">A type of system that is vulnerable to any kind of cyber attack.</string>
    <string name="answer_9_2">A software with a lot of bugs and available for everyone.</string>
    <string name="answer_9_3">A software for which the original source code is made freely available and may be redistributed and modified.</string>
    <string name="submit_button_text">Submit</string>
    <string name="desc_1">This quiz will test your full stack developer and some cyber security knowledge.</string>
    <string name="desc_2">Built for Udacity© Google Android Scholarship Program and powered by Udacity© community.</string>
    <string name="start_button_text">Start Quiz</string>
    <string name="name_input">Your Name</string>
    <string name="applicant_text">Applicant</string>
    <string name="user_info_toast">Name field cannot be empty</string>
    <string name="check_answer_prompt">Press back to check the answers</string>
    <string name="addressing">Dear</string>
    <string name="time_up_prompt">Time is up!</string>
    <string name="scored_text">You have scored</string>
    <string name="max_score">/10</string>
    <string name="html_correct_answer">HYPER TEXT MARKUP LANGUAGE</string>
    <string name="time_placeholder">10:00</string>
    <string name="retry_text">Try Again</string>
    <string name="correct_answer_1">It stands for PHP: HyperText PreProcessor</string>
    <string name="correct_answer_3">document.getElementsByTagName(\"header\");</string>
    <string name="correct_answer_2">Full Stack Developers are familiar with all layers in computer software development</string>
    <string name="correct_answer_5">PHP and Node.js are both server sided scripts whereas HTML is a markup language.</string>
    <string name="correct_answer_6">XSS stands for Cross Side Scripting.</string>
    <string name="correct_answer_7">HTTP ok response is \'200\'.</string>
    <string name="correct_answer_8">Python and Java are programming languages. Linux and Android are operating systems.</string>
    <string name="correct_answer_10">Hyper Text Markup Language</string>
    <string name="correct_answer_4">The output of this code is 50</string>
</resources>