<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        style="@style/QuizAppTheme"
        android:id="@+id/main_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            style="@style/question_theme"
            android:id="@+id/question_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/question_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    style="@style/answer_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1_1" />

                <RadioButton
                    style="@style/answer_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1_2" />

                <RadioButton
                    style="@style/answer_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1_3" />

                <RadioButton
                    style="@style/answer_theme"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1_4" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            style="@style/question_theme"
            android:id="@+id/question_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/question_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_2" />

            <CheckBox
                style="@style/answer_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_2_1" />

            <CheckBox
                style="@style/answer_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_2_2" />

            <CheckBox
                style="@style/answer_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_2_3" />

            <CheckBox
                style="@style/answer_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_2_4" />


        </LinearLayout>

        <LinearLayout
            style="@style/question_theme"
            android:id="@+id/question_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/question_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_3" />

            <EditText
                style="@style/placeholder_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer_placeholder" />

        </LinearLayout>

        <LinearLayout
            style="@style/question_theme"
            android:id="@+id/question_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/question_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_4" />

            <TextView
                style="@style/question_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_4_info" />

            <EditText
                style="@style/placeholder_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer_placeholder" />

        </LinearLayout>

        <LinearLayout
            style="@style/question_theme"
            android:id="@+id/question_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/question_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_5" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    style="@style/answer_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_5_1" />

                <RadioButton
                    style="@style/answer_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_5_2" />

                <RadioButton
                    style="@style/answer_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_5_3" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            style="@style/question_theme"
            android:id="@+id/question_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/question_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_6" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    style="@style/answer_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_6_1" />

                <RadioButton
                    style="@style/answer_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_6_2" />

                <RadioButton
                    style="@style/answer_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_6_3" />

                <RadioButton
                    style="@style/answer_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_6_4" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            style="@style/question_theme"
            android:id="@+id/question_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/question_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_7" />

            <EditText
                style="@style/placeholder_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer_placeholder" />

        </LinearLayout>

        <LinearLayout
            style="@style/question_theme"
            android:id="@+id/question_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/question_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_8" />

            <CheckBox
                style="@style/answer_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_8_1"/>

            <CheckBox
                style="@style/answer_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_8_2"/>

            <CheckBox
                style="@style/answer_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_8_3"/>

            <CheckBox
                style="@style/answer_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_8_4"/>

        </LinearLayout>

        <LinearLayout
            style="@style/question_theme"
            android:id="@+id/question_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/question_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_9" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    style="@style/answer_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_9_1" />

                <RadioButton
                    style="@style/answer_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_9_2" />

                <RadioButton
                    style="@style/answer_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_9_3" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            style="@style/question_theme"
            android:id="@+id/question_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/question_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_10" />

            <EditText
                style="@style/placeholder_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer_placeholder" />

        </LinearLayout>

        <Button
            style="@style/submit_button_theme"
            android:layout_height="wrap_content"
            android:onClick="submitExam"
            android:text="@string/submit_button_text" />

    </LinearLayout>

</ScrollView>
